--- a/src/sass/helpers.scss
+++ b/src/sass/helpers.scss
@@ -1,3 +1,24 @@
+@mixin invisible-scroll ($direction: x) {
+  @if $direction == x {
+    overflow-x: scroll;
+    overflow-y: hidden;
+  } @else if $direction == y {
+    overflow-x: hidden;
+    overflow-y: scroll;
+  } @else {
+    overflow-x: scroll;
+    overflow-y: scroll;
+  }
+
+  scrollbar-width: none;
+  scrollbar-height: none;
+  -ms-overflow-style: none;
+  &::-webkit-scrollbar {
+    height: 0;
+    background: transparent;
+  }
+}
+
 @mixin debug ($color: red) {
   outline: 1px solid $color;
 }
